--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,9 +13,11 @@
 
   <!-- include source files here... -->
   <script src="lib/Airport.js"></script>
+  <script src="lib/Plane.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/airportSpec.js"></script>
+  <script src="spec/planeSpec.js"></script>
 
 </head>
 
